# serverless-python-application-pattern

code/: cookiecutter.json
code/{{cookiecutter.directory_name}}/: .env.example  .gitignore  LICENSE  Pulumi.dev.yaml  Pulumi.yaml  README.md  api.yaml  pyproject.toml  spa_project.toml
code/{{cookiecutter.directory_name}}/.spa/templates/: lambda.txt  lambda_conf.txt  lambda_endpoint.txt  model.txt  service.txt  test_lambda_function.txt
code/{{cookiecutter.directory_name}}/.spa/templates/models/: controller.txt
code/{{cookiecutter.directory_name}}/infra/: __main__.py  config.py
code/{{cookiecutter.directory_name}}/infra/commons/: __init__.py  tags.py
code/{{cookiecutter.directory_name}}/infra/components/: __init__.py  apigateway.py  lambda_functions.py  lambda_layers.py  lambda_role.py
code/{{cookiecutter.directory_name}}/infra/components/lambdas/: __init__.py
code/{{cookiecutter.directory_name}}/infra/utils/: __init__.py
code/{{cookiecutter.directory_name}}/infra/utils/aws/: secrets.py  ssm.py
code/{{cookiecutter.directory_name}}/src/lambdas/hello_world/: endpoint.yaml  infra_config.py  lambda_function.py  test_lambda_function.py
code/{{cookiecutter.directory_name}}/src/layers/core/python/: requirements.txt
code/{{cookiecutter.directory_name}}/src/layers/core/python/core_aws/: secret_manager.py  sqs.py  ssm.py
code/{{cookiecutter.directory_name}}/src/layers/core/python/core_db/: BaseModel.py  BaseService.py  DBConnection.py  config.py
code/{{cookiecutter.directory_name}}/src/layers/databases/python/: requirements.txt
(+17 files in other folders)
